<?xml version="1.0"?>
<package format="3">
  <name>arduino_motor_interface</name>
  <version>0.1.0</version>
  <description>ROS 2 node to control Arduino-based motors via serial using Twist messages</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

